--- a/index.html
+++ b/index.html
@@ -6,60 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header class="">
-        <nav>
-            <a href="./index.html">WebStudio</a>
 
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <!-- Шапка сайта-->
+
+    <header class="header">
+        <nav class="header-navigation">
+            <a href="./index.html" class="logo link">Web<span class="header-span">Studio</span></a>
+
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link link" href="">Студия</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-contact-list list">
+            <li class="header-contact-item">
+                <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a>+38 099 111 11 11</a>
+            <li class="header-contact-item">
+                <a class="header-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
 
     </header>
 
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+
+        <!-- Секция-герой -->
+
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="btn" type="button">Заказать услугу</button>
         </section>
-        <section>
-            <h2 hidden>Особенности</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+
+        <!-- Особенности -->
+
+        <section class="section">
+            <h2 class="section-title" hidden>Особенности</h2>
+            <ul class="section-list list">
+                <li class="list-item">
+                    <h3 class="item-title">Внимание к деталям</h3>
+                    <p class="item-text">Идейные соображения, а также начало повседневной работы по формированию
+                        позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="list-item">
+                    <h3 class="item-title">Пунктуальность</h3>
+                    <p class="item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="list-item">
+                    <h3 class="item-title">Планирование</h3>
+                    <p class="item-text">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="list-item">
+                    <h3 class="item-title">Современные технологии</h3>
+                    <p class="item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    </p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <!-- Чем мы занимаемся -->
+
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="section-list list">
                 <li>
                     <img src="./images/box1.jpg" alt="Верстает сайт по макету" width="370">
                 </li>
@@ -72,41 +93,46 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <!-- Наша команда -->
+
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="section-list list">
+                <li class="list-item">
                     <img src="./images/teamcard-1.jpg" alt="Мужчина в очках улыбается" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product designer</p>
+                    <h3 class="item-title-name">Игорь Демьяненко</h3>
+                    <p class="item-text" lang="en">Product designer</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/teamcard-2.jpg" alt="Женщина в очках улыбается" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="item-title-name">Ольга Репина</h3>
+                    <p class="item-text" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/teamcard-3.jpg" alt="Мужчина улыбается" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="item-title-name">Николай Тарасов</h3>
+                    <p class="item-text" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/teamcard-4.jpg" alt="Мужчина в очках с легкой улыбкой" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="item-title-name">Михаил Ермаков</h3>
+                    <p class="item-text" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
+
+    <!-- Футер -->
+
+    <footer class="footer">
+        <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
+        <ul class="footer-list list">
+            <li class="adress">г. Киев, пр-т Леси Украинки, 26</li>
             <li>
-                <a>info@example.com</a>
+                <a class="footer-contact-link link" href="mailto:info@example.com">info@example.com</a>
             </li>
             <li>
-                <a>+38 099 111 11 11</a>
+                <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
     </footer>
