--- a/portfolio.html
+++ b/portfolio.html
@@ -69,63 +69,63 @@
             <ul class="examples-list list">
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-1.jpg" alt="Открытый сайт в ноутбуке">
+                        <img src="./images/portfolio-1.jpg" alt="Открытый сайт в ноутбуке" width="370">
                         <h2 class="examples-title">Технокряк</h2>
                         <p class="examles-type">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-2.jpg" alt="Два баскетболиста с мячом">
+                        <img src="./images/portfolio-2.jpg" alt="Два баскетболиста с мячом" width="370">
                         <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
                         <p class="examles-type">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-3.jpg" alt="Постер ресторана Seafood">
+                        <img src="./images/portfolio-3.jpg" alt="Постер ресторана Seafood" width="370">
                         <h2 class="examples-title">Ресторан Seafood</h2>
                         <p class="examles-type">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-4.jpg" alt="Наушники">
+                        <img src="./images/portfolio-4.jpg" alt="Наушники" width="370">
                         <h2 class="examples-title">Проект Prime</h2>
                         <p class="examles-type">Маркетинг</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-5.jpg" alt="Белая и бежевая коробки">
+                        <img src="./images/portfolio-5.jpg" alt="Белая и бежевая коробки" width="370">
                         <h2 class="examples-title">Проект Boxes</h2>
                         <p class="examles-type">Приложение</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-6.jpg" alt="Открыт веб-сайт с картой мира на экране компьютера">
+                        <img src="./images/portfolio-6.jpg" alt="Открыт веб-сайт с картой мира на экране компьютера" width="370">
                         <h2 class="examples-title">Inspiration has no Borders</h2>
                         <p class="examles-type">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-7.jpg" alt="Лежит открытая книга">
+                        <img src="./images/portfolio-7.jpg" alt="Лежит открытая книга" width="370">
                         <h2 class="examples-title">Издание Limited Edition</h2>
                         <p class="examles-type">Дизайн</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-8.jpg" alt="Ярлык с надписью">
+                        <img src="./images/portfolio-8.jpg" alt="Ярлык с надписью" width="370">
                         <h2 class="examples-title">Проект LAB</h2>
                         <p class="examles-type">Маркетинг</p>
                     </a>
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-9.jpg" alt="На ноутбуке открыта страница приложения">
+                        <img src="./images/portfolio-9.jpg" alt="На ноутбуке открыта страница приложения" width="370">
                         <h2 class="examples-title" lang="en">Growing Business</h2>
                         <p class="examles-type">Приложение</p>
                     </a>
