--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <a href="./index.html" class="logo link">Web<span class="header-span">Studio</span></a>
 
             <ul class="header-list list">
-                <li class="header-item"><a class="header-link link" href="">Студия</a></li>
+                <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
                 <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
                 <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
             </ul>
