--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
         <!-- Наша команда -->
 
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="section-list list">
+        <section class="section-team">
+            <h2 class="section-team-title">Наша команда</h2>
+            <ul class="section-team-list list">
                 <li class="list-item">
                     <img src="./images/teamcard-1.jpg" alt="Мужчина в очках улыбается" width="270">
                     <h3 class="item-title-name">Игорь Демьяненко</h3>
@@ -126,15 +126,17 @@
 
     <footer class="footer">
         <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
-        <ul class="footer-list list">
-            <li class="adress">г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
-                <a class="footer-contact-link link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
+        <address class="address">
+            <ul class="footer-list list">
+                <li class="address-name">г. Киев, пр-т Леси Украинки, 26</li>
+                <li>
+                    <a class="footer-contact-link link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
 
