--- a/portfolio.html
+++ b/portfolio.html
@@ -43,29 +43,28 @@
 
         <!--Фильтр-->
 
-        <a href="./portfolio.html"></a>
-        <ul class="filter list">
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Все</button>
-            </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Веб-сайты</button>
-            </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Приложения</button>
-            </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Дизайн</button>
-            </li>
-            <li class="filter-item">
-                <button class="filter-btn" type="button">Маркетинг</button>
-            </li>
-        </ul>
-
-        <!-- Портфолио -->
-
         <section class="examples">
             <h1 hidden>Портфолио</h1>
+
+            <ul class="filter list">
+                <li class="filter-item">
+                    <button class="filter-btn" type="button">Все</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn" type="button">Веб-сайты</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn" type="button">Приложения</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn" type="button">Дизайн</button>
+                </li>
+                <li class="filter-item">
+                    <button class="filter-btn" type="button">Маркетинг</button>
+                </li>
+            </ul>
+
+            <!-- Портфолио -->
             <ul class="examples-list list">
                 <li class="examples-item">
                     <a class="examples-link link" href="">
@@ -104,7 +103,8 @@
                 </li>
                 <li class="examples-item">
                     <a class="examples-link link" href="">
-                        <img src="./images/portfolio-6.jpg" alt="Открыт веб-сайт с картой мира на экране компьютера" width="370">
+                        <img src="./images/portfolio-6.jpg" alt="Открыт веб-сайт с картой мира на экране компьютера"
+                            width="370">
                         <h2 class="examples-title">Inspiration has no Borders</h2>
                         <p class="examles-type">Веб-сайт</p>
                     </a>
@@ -138,6 +138,7 @@
 
     <footer class="footer">
         <a class="logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
+        <address class="address">
         <ul class="footer-list list">
             <li class="adress">г. Киев, пр-т Леси Украинки, 26</li>
             <li>
@@ -147,6 +148,7 @@
                 <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
+    </address>
     </footer>
 
 </body>
