--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
-                <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-item"><a class="header-link current link" href="./portfolio.html">Портфолио</a></li>
                 <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -48,19 +48,19 @@
 
             <ul class="filter list">
                 <li class="filter-item">
-                    <button class="filter-btn" type="button">Все</button>
+                    <button class="filter-btn active" type="button">Все</button>
                 </li>
                 <li class="filter-item">
-                    <button class="filter-btn" type="button">Веб-сайты</button>
+                    <button class="filter-btn active" type="button">Веб-сайты</button>
                 </li>
                 <li class="filter-item">
-                    <button class="filter-btn" type="button">Приложения</button>
+                    <button class="filter-btn active" type="button">Приложения</button>
                 </li>
                 <li class="filter-item">
-                    <button class="filter-btn" type="button">Дизайн</button>
+                    <button class="filter-btn active" type="button">Дизайн</button>
                 </li>
                 <li class="filter-item">
-                    <button class="filter-btn" type="button">Маркетинг</button>
+                    <button class="filter-btn active" type="button">Маркетинг</button>
                 </li>
             </ul>
 
